--- a/Poc_Test 5.0/Config/DefaultEngine.ini
+++ b/Poc_Test 5.0/Config/DefaultEngine.ini
@@ -13,7 +13,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap
 ServerDefaultMap=/Engine/Maps/Entry
-GlobalDefaultGameMode=/Script/Poc_Test.Poc_TestGameMode
+GlobalDefaultGameMode=/Game/FirstPerson/Blueprints/NewGameMode.NewGameMode_C
 GlobalDefaultServerGameMode=None
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
