--- a/Poc_Test 5.0/Poc_Test.uproject
+++ b/Poc_Test 5.0/Poc_Test.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "{813F3BA1-CDB1-4C2F-986C-E66BFBDF737C}",
+	"EngineAssociation": "5.0",
 	"Category": "",
 	"Description": "",
 	"Modules": [
