Sistemare il progetto e la UI

--- a/Poc_Test 5.0/Config/DefaultGame.ini
+++ b/Poc_Test 5.0/Config/DefaultGame.ini
@@ -4,3 +4,11 @@ ProjectName=First Person Template
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=CD89FD5F4CB45CBBCB3F6CAB88D92A67
+ProjectName=ShowRoom3D
+CompanyName=SmockingFingertips
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "F17CC52DD61D4D8980818CAC351347B6", "ShowRoom3D")
+Description=Is a showroom of chairs
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Shipping
+
